Update spelling & add contact form

--- a/contact.html
+++ b/contact.html
@@ -32,15 +32,34 @@
         </div>
         <div class="row" style="margin: 0px 0px 150px 0px;">
           <div class="col-md-12 text-center">
-            <p><i class="fa fa-envelope-o" aria-hidden="true"></i> : <a href="mailto:tyronwyt@gmail.com">tyronwyt@gmail.com</a></p>
-            <div class="social-links">
+            <p>Email me:<br/>
+            <i class="fa fa-envelope-o" aria-hidden="true"></i> : <a href="mailto:tyronwyt@gmail.com">tyronwyt@gmail.com</a></p>
+            <p>Or fill the form out below:</p>
+            <div class="col-md-6 col-md-offset-3">
+              <form class="" action="https://formspree.io/tyronwyt@gmail.com" method="post">
+                <div class="form-group">
+                  <input class="form-control" type="text" name="Name" placeholder="Name">
+                </div>
+                <div class="form-group">
+                  <input class="form-control" type="email" name="Email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="Message" rows="8" cols="80" placeholder="Message"></textarea>
+                </div>
+                <div class="form-group">
+                  <button class="btn btn-default button">Submit</button>
+                </div>
+
+              </form>
+            </div>
+            <!-- <div class="social-links">
               <ul>
                 <li><a href="https://github.com/tyronwyt"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
                 <li><a href="https://codepen.io/tyronw/"><i class="fa fa-codepen fa-2x" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/tyronwytrykowski/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
                 <li><a href="https://twitter.com/TyronRGB"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
               </ul>
-            </div>
+            </div> -->
 
 
           </div>
