--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <div class="col-md-12">
             <h1>About me</h1>
             <p>I was born in South Africa and love a good <a href="https://en.wiktionary.org/wiki/braai">braai <span class="glyphicon glyphicon-fire" aria-hidden="true"></span></a>.</p>
-            <p>I enjoy all things digital and the Internet of things. If I am not building websites and learning new things, I am tinkering away on my 3d printer and making things.
-            With a strong background of design, I enjoy bringing creativity in to my development process and always passionate to learn more along the way.</p>
+            <p>I enjoy all things digital. If I am not building websites and learning new things, I am tinkering away on my 3d printer and making things.
+            With a strong background in design, I enjoy bringing creativity in to my development process and always passionate to learn more along the way.</p>
             <p>Following my passion, I left flight school to learn web development and on the way started facilitating at a national college in South Africa.
               I then moved on and joined an advertising startup where I was responsible for all the design and web work, whilst at the same time freelancing, building and deploying multiple WordPress sites.
               My latest experience includes working with a global creative team developing branding and marketing and communication material for a Fortune 500 company.
