--- a/portfolio/SP-Global.html
+++ b/portfolio/SP-Global.html
@@ -50,8 +50,8 @@
               <div class="col-md-6 subpage-card">
                 <h2>S&amp;P Global</h2>
                 <p>I was tasked to rebrand a wide array of S&amp;P Global's marketing materials, ranging from email templates to lead generating landing pages.</p>
-                <p>The main requirements were that these pages needed to be modular, templated ofcourse responsive, all while degrading gracefully on older/less popular browsers and clients.
-                The landing page templates were designed and built using the companies newly released style guide setup with Sass and new functional additions added for better usability.</p>
+                <p>The main requirements were that these pages needed to be modular, templated and responsive all while degrading gracefully on older/less popular browsers and clients.
+                The landing page templates were designed and built using the company's newly released style guide setup with Sass and new functional additions added for better usability.</p>
                 <a href="http://marketing.platts.com/transformation-growth" class="btn">View <i class="fa fa-angle-right" aria-hidden="true"></i></a>
               </div>
 
