Update form validation

--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,13 @@
             <div class="col-md-6 col-md-offset-3">
               <form class="" action="https://formspree.io/tyronwyt@gmail.com" method="post">
                 <div class="form-group">
-                  <input class="form-control" type="text" name="Name" placeholder="Name">
+                  <input class="form-control" type="text" name="Name" placeholder="Name" required>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" type="email" name="Email" placeholder="Email">
+                  <input class="form-control" type="email" name="Email" placeholder="Email" required>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="Message" rows="8" cols="80" placeholder="Message"></textarea>
+                  <textarea class="form-control" name="Message" rows="8" cols="80" placeholder="Message" required></textarea>
                 </div>
                 <div class="form-group">
                   <button class="btn btn-default button">Submit</button>
