Update card css to display name on hover

--- a/index.html
+++ b/index.html
@@ -47,15 +47,25 @@
             <div class="featured-container">
               <a href="portfolio/SP-GLobal.html">
                 <div class="col-md-4 card"  style="background-image: url('assets/images/Front-end.jpg')">
+                <div class="card-info">
+                  <h4>S&amp;P Global <i class="fa fa-angle-right" aria-hidden="true"></i></h4>
+                </div>
+
                 </div>
               </a>
               <a href="portfolio/JHA-Recruitment.html">
                 <div class="col-md-4 card"  style="background-image: url('assets/images/JHA-Recruitment.jpg')">
+                  <div class="card-info">
+                    <h4>JHA Recruitement <i class="fa fa-angle-right" aria-hidden="true"></i></h4>
+                  </div>
                 </div>
+
               </a>
               <a href="portfolio/Icecream.html">
               <div class="col-md-4 card" style="background-image: url('assets/images/ice-cream.gif')">
-
+                <div class="card-info">
+                  <h4>Pure HTML &amp; CSS Ice-cream <i class="fa fa-angle-right" aria-hidden="true"></i></h4>
+                </div>
               </div>
               </a>
 
